# Mediapipe_2_Dlib_Landmarks

./: .gitignore  README.md  playground.ipynb  setup.cfg
.github/workflows/: python-package.yml
mediapipe2dlib/: mp2dlib.py
mediapipe2dlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mediapipe2dlib/mediapipe2dlib.egg-info/: PKG-INFO  SOURCES.txt
