[metadata]
name = mediapipe2dlib
version = 1.0
author = Peizhi Yan
description = A utility to convert Mediapipe landmarks to Dlib landmarks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PeizhiYan/Mediapipe_2_Dlib_Landmarks
project_urls =
    Bug Tracker = https://github.com/PeizhiYan/Mediapipe_2_Dlib_Landmarks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
exclude =
    tests*
